--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -1,15 +1,95 @@
 {\let\clearpage\relax\let\cleardoublepage\relax
-	\chapter{Simulazione crescita embrioni planetarii nello schema CA}
+	\chapter{Simulazione accrescimento su embrioni protoplanetarii}
 }
 
 \begin{workout}[Generic intro to CA (chapter intro)]
 La formaziane di planetaria bottom-up ipotizza la coagulazione  
 \end{workout}
 
+\begin{workout}[modello globale: evoluzione dal semplice al complesso]
+	Global model of planets formation and evolution: more detailed submodels
+	Il modello pi\'u semplice di disco di accrescimento usa distribuzione esponenziale per andamento densit\'a superficiale e temperature, assumendo disco otticamente sottile, e relazione $L_*\propto M_*^4$ di sequenza principale. Le lacune di questo modello sono
+	\begin{itemize}
+		\item i dischi sono otticamente spessi con transizioni nell'opacit\'a
+		\item non \'e presente evoluzione temporale consistente
+	\end{itemize}
+\end{workout}
 
-{\let\clearpage\relax\let\cleardoublepage\relax
-\chapter{Schema di accrescimento componente solida: formazione planetesimi - da riassumere nel capitolo ''schema CA a volo d'uccello''}
-}
+\section{Condizioni iniziali ed evoluzione componente solida}
+%\section{Distribuzione iniziale planetesimi ed evoluzione}
+
+Assumendo conversione completa di polvere in planetesimi, la densit\'a superficiale di planetesimi \'e
+\begin{equation}
+\Sigma_p(t=0,r)=f_{dg}\eta_{ice}\Sigma_g(t=0,r)
+\end{equation}
+con $f_{dg}$ rapporto gas/polvere (circa metallicit\'a) \'e una parametro casuale con distribuzione che riflette distribuzione di metallicit\'a stellari, $\eta_{ice}$ tiene conto della discontinuit\'a nella distribuzione superficiale di solidi all'iceline.
+
+Sulla scorta della piccola differenza tra composizione solare e composizione meteoritica e assumendo inoltre che il ferro sia un buon indicatore della componente solida  si usa la formula
+\begin{equation}
+\frac{f_{D/G}}{f_{D/G\odot}}=10\expy{[\cel{Fe}{}{}{}/\cel{H}{}{}{}]}
+\end{equation}
+con $f_{D/G\odot}\approx\numrange{0.01}{0.02}$ (\cite{lodders2003solar}).
+
+Si introduce un fattore correttivo per il drift della polvere entro i \SI{20}{\astronomicalunit} compreso tra $2-4$ (\cite{kornet2004alternative}) e infine si sfrutta la distribuzione della metallicit\'a per stelle di massa solare nelle vicinanze del Sole:
+\begin{equation}
+p([Fe/H])=\frac{1}{\sigma\sqrt{2\pi}}\exp{-\frac{([Fe/H]-\mu)^2}{2\sigma^2}}
+\end{equation}
+Per le stelle campionate da CORALIE (\cite{udry2000coralie}, 1650 stelle nane entro \SI{50}{\parsec}) si ha $\mu=-0.02$ e $\sigma=0.22$.
+
+L'evoluzione della distribuzione dei planetesimi tiene conto dell'acrescimento sugli embrioni planetari
+\begin{equation}\dot{\Sigma}_p=-\frac{(3M_*)\expy{1/3}}{6\pi a_p^2B_LM_p\expy{1/3}}\dot{M}_c\end{equation}
+e generalmente si assume che eccentricit\'a e inclinazione seguono distribuzione di Rayleigh.
+
+Il drift dei planetesimi dovuto all'interazione col gas e la formaziane gap nella distribuzione dei planetesimi sono di solito trascurati.
+
+\begin{workout}[Initial planetesimal distro]
+	Dust converted early everywhere fully-efficient (mordasini18: pg 12),Thommes pg8)
+	\begin{align*}
+		&\Sigma_p(t=0,r)=f_{dg}\eta_{ice}\Sigma_g(t=0,r)\\
+		&\dot{\Sigma}_p(r)=-\frac{1}{2\pi aB_LR_H}\dot{M}_c
+	\end{align*}
+	Icelines Mordasini 1141: inside where T exceeds sublimation
+	{Embryo starting position}
+	Usually a distro uniform in log(a): relative spacing of few Hill spheres (Kokubo Ida 10)
+	Ida, lin10: asymptotical isolation mass ''Toward a Deterministic Model of Planetary Formation VI'',
+	Trapped evolution model: Hasegawa pudritz 11, Cridland 16
+\end{workout}
+
+\begin{workout}[Planet host stars are enriched in nikel and silicon]
+	Robinson06
+\end{workout}
+
+%\section{Caratteristiche iniziali degli embrioni planetarii e accrescimento}
+
+La massa iniziale dei core deve essere molto minore della massa di isolamento: si usano 20-50 embrioni di frazioni di massa terrestre ($0.01-0.1\mearth{}$); la distanza dalla stella varia seguendo distribuzione di probabilit\'a $p(a)$ inversamente proporzionale alla distanza orbitale $p(a)\,da\propto\frac{da}{\Delta}\propto\,d\log{a}$. Il momento di comparsa \'e determinato dal rate di accrescimento dei planetesimi \eqref{eq:Gaccretionpl}.
+
+La massa dei core varia per l'accrescimento dei planetesimi secondo
+\begin{align}
+	&\dot{M}_c=\Omega\Sigma_pR^2_{capt}F_G
+	%&\dot{\Sigma}_p(r)=-\frac{1}{2\pi aB_LR_H}\dot{M}_c
+\end{align}
+
+Per determinare l'accrescimento di gas \'e necessario calcolare la struttura planetaria in alternativa si pu\'o averne una stima da
+\begin{align}
+	&\dot{M}_{e,KH}=\frac{M_p}{\tau_{KH}}\\
+	&\tau_{KH}=10\expy{p}(\frac{M_p}{\mearth{}})^q(\frac{\kappa}{\si{\gram\per\square\cm}})\si{\year}
+\end{align}
+dove p,q sono ottenuti tramite modelli di struttura planetaria; \cite{mordasini2014grain} hanno determinato $\kappa=\SI{e-2}{\gram\per\square\cm}$, $p=10.4$ e $q=-1.5$.
+
+\begin{workout}[Grain opacity and the bulk composition of extrasolar planets (Alibert mordasini klahr)]
+	$b=10.4+\log{f}$
+\end{workout}
+
+\begin{workout}[Higher mass gap formation reduces accretion rate]
+	\begin{equation}
+	f_{va04}=1.668(\frac{M_p}{\mjupiter{}})\expy{1/3}\exp{-\frac{M_p}{1.5\mjupiter{}}}+0.04
+	\end{equation}
+\end{workout}
+
+
+%{\let\clearpage\relax\let\cleardoublepage\relax
+%\chapter{Schema di accrescimento componente solida: formazione planetesimi - da riassumere nel capitolo ''schema CA a volo d'uccello''}
+%}
 
 \begin{workout}[Some refs]
 	\begin{itemize}
@@ -40,7 +120,7 @@ Planetary formation scenario revisited: CA vs GI (2007)
 
 \end{workout}
 
-\section{Sedimentazione polvere e formazione planetesimi}
+%\section{Sedimentazione polvere e formazione planetesimi}
 
 \begin{errata}[Massa, dimensioni polvere nei dischi protoplanetarii]
 La polvere presente nel materiale interstellare ha dimensioni di \SI{0.1}{\micro\meter}: l'evoluzione del disco di polvere \'e determinata da attrazione della stella centrale e drag del gas.
@@ -122,7 +202,7 @@ Weidenschilling cuzzi 06: Particle-gas dynamics and primary accretion, Apai Laur
 Stopping time $t_s=\frac{\rho_sa}{\rho c_s}$ ($a<\lambda_g$). L'evoluzione dinamica delle particelle solide \'e determinata flussi macroscopici dovuti all'evoluzione del disco, gas-drag, settling
 \end{workout}
 
-\section{Accrescimento planetesimi: formazione proto-pianeti.}
+%\section{Accrescimento planetesimi: formazione proto-pianeti.}
 
 Assumiamo quindi che la polvere condensi in planetesimi con densit\'a superficiale $\Sigma_p$.
 \subsection{Distribuzione velocit\'a planetesimi}
@@ -174,7 +254,9 @@ Quando la massa degli embrioni domina su quella dei planetesimi si ha transizion
 &M_{iso}=\frac{(4\pi Br^2\Sigma_p)\expy{3/2}}{(3M_*)\expy{1/2}}=\num{2.10e-3}(\frac{Br^2\Sigma_p}{2\sqrt{3}})\expy{3/2}(\frac{\msun{}}{M_*})\expy{1/2}\mearth{}
 \end{align}
 
-\begin{errata}[Isolation mass: proportion]
+\begin{errata}[Isolation mass:]
+kokubo ida 12:
+\[M_{iso}\approx2\pi ab\Sigma_d=0.16f_d\expy{3/2}\epsilon_{ice}\expy{3/2}(\frac{b}{10r_h})\expy{3/2}(a(\si{\astronomicalunit}))\expy{3/4}(\frac{M_*}{\msun{}})\expy{-1/2}\mearth{}\]
 \begin{equation}
 M_{iso}\propto M_*\expy{-1/2}\Sigma_p\expy{3/2}r^3
 \end{equation}
@@ -283,8 +365,29 @@ Accrescimento ordinato: $\frac{1}{M_e}\TDy{t}{M_e}\propto M_e\expy{-1/3}$. Accre
 
 
 {\let\clearpage\relax\let\cleardoublepage\relax
-\chapter{Evoluzione struttura planetaria: accrescimento di gas.}\label{chap:gasaccretion}
+\chapter{Evoluzione struttura planetaria: accrescimento di gas. Evoluzione disco di accrescimento}\label{chap:gasaccretion}
 }% e fase isolata
+
+Modelli pi\'u recenti  risolvono l'equazione per l'evoluzione viscosa:
+\begin{align}
+	&\TDy{t}{\Sigma}=\frac{1}{r}\PDof{r}[3r\expy{1/2}\PDof{r}(\nu\Sigma r\expy{1/2})]+\dot{\Sigma}_w(r)+\dot{\Sigma}_{embryo}(r)\label{eq:diskaccrphev-m18}\\
+	&\dot{\Sigma}_w(a)=\left\{\begin{array}{c}0\quad a<R_g\\\frac{\dot{M}_w}{2\pi(a_{max}-R_g)a}\quad \text{altrimenti}\\\end{array}\right.
+\end{align}
+con $\dot{\Sigma}_w$ contributo della foto-evaporazione (\cite{veras2004outward}), $R_g=\SI{5}{\astronomicalunit}$ e $a_{max}$ estremo del disco,  $\dot{\Sigma}_{embryo}$ contributo di accrescimento di gas e componente solida dei pianeti.
+La densit\'a superficiale iniziale \'e assunta essere:
+\begin{equation}
+\Sigma(a,t=0)=\Sigma_0(\frac{r}{1AU})\expy{p_g}\Exp{[-(\frac{r}{R_o})\expy{2+p_g}]}(1-\sqrt{\frac{r}{R_i}})
+\end{equation}
+dove i parametri possono essere scelti casualmente secondo una distribuzione di probabilit\'a ricavata dalle osservazioni.
+
+La distribuzione di massa e la frazione di dischi protoplanetari per ammassi stellari di et\'a diversa \'e mostrata in figura (\ref{fig:initdistro}). La massa \'e determinata misurando il flusso di emissione termica della polvere: la distribuzione di $\log{M_{disk}}$  \'e gaussiana e per il cluster Ophiuchus la distribuzione \'e fittata da gaussiana corrispondente a massa media $M_{disk}=0.042\msun{}$.
+
+Il tempo caratteristico del disco \'e determinato dalla viscosit\'a $\alpha$: fissata $\alpha$ compatibile con tempo caratteristico osservato $\tau_{disk}^{obs}\approx\SI{3}{\mega\year}$ e assumendo la distribuzione uniforme nel logaritmo di $\dot{M}_w$, si calcola  $t_{disk}(\alpha,\Sigma_0,\dot{M}_w)$ determinando gli estremi dello fotoevaporazione per riprodurre tempi di vita osservati.
+
+Valori tipici sono $\dot{M}_w=\SIrange{5e-10}{3e-8}\msun{}/\si{\year}$ per $\alpha=\num{7e-3}$.
+
+Nelle popolazione planetaria considerata $\alpha$ \'e fissato compatibilmente con le osservazioni  ed \'e omogeneo e costante.
+
 \begin{workout}[Some refs]
 	\begin{itemize}
 		\item Hasegawa Pudritz 13: Planetary population in mass-period diagram: a statistical treatment of exoplanet formation and role of planet traps.
@@ -436,7 +539,8 @@ fonti energia: tidal heating radiogeninc heat, star flux
 
 
 {\let\clearpage\relax\let\cleardoublepage\relax
-\chapter{Evoluzione orbite proto-pianeti: migrazione planetaria (e N-body integrator: implementazione; la parte di teoria nella prima parte dei vincoli e l'implementazione dell'integratore nell seconda parte?).}
+%\chapter{Evoluzione orbite proto-pianeti: migrazione planetaria (e N-body integrator: implementazione; la parte di teoria nella prima parte dei vincoli e l'implementazione dell'integratore nell seconda parte?).}
+\chapter{Interazioni N-body tra embrioni planetari  e con il disco di gas}
 }
 
 \begin{wrapfigure}[10]{l}{0.5\textwidth}
