--- a/seminario.bib
+++ b/seminario.bib
@@ -292,6 +292,18 @@ pages={1282},
 	publisher={National Academy of Sciences}
 }
 
+@article{kornet2001diversity,
+	title={Diversity of planetary systems from evolution of solids in protoplanetary disks},
+	author={Kornet, K and Stepinski, TF and R{\'o}{\.z}yczka, M},
+	journal={Astronomy \& Astrophysics},
+	volume={378},
+	number={1},
+	pages={180--191},
+	year={2001},
+	publisher={EDP Sciences}
+}
+
+
 @article{kornet2004alternative,
   title={An alternative look at the snowline in protoplanetary disks},
   author={Kornet, Kacper and R{\'o}{\.z}yczka, M and Stepinski, Tomasz F},
